@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_authnz_dbd: Support the expression parser within the require
+     directives. [Graham Leggett]
+
   *) mod_authnz_ldap: Support the expression parser within the require
      directives. [Graham Leggett]
 
